tests/res/compile_errors/block_not_expression.say
// A `{ … }` block is a statement, not an expression: it cannot produce a value.
print({ 1 }); // error: Unexpected token {
